--- a/project/banner.css
+++ b/project/banner.css
@@ -27,18 +27,19 @@ nav ul {
 nav a {
     text-decoration: none;
     display: block;
-    border: 1px solid #854441;
+    border: 1px solid #743C39;
     background-color: #f18c88;
-    color: #241E1E;
+    color: #231A1A;
 }
 nav a:hover {
     color: #FCE4E4;
-    background-color: #854441;
+    background-color: #743C39;
 }
 nav a {
     padding: 0.5em;
 }
 hgroup {
+    padding: 0;
     margin-top: 5em;
     font-family: "Oswald", sans-serif;
     text-align: center;
